--- a/.env
+++ b/.env
@@ -15,6 +15,9 @@ DB_DATABASE=sist_prueba
 DB_USERNAME=root
 DB_PASSWORD=
 
+NOCAPTCHA_SITEKEY=6LeJXlcqAAAAAIcpN6kaauiwr9raE939kDe24gJV
+NOCAPTCHA_SECRET=6LeJXlcqAAAAAISnKIxrBNC0o3sd9HOlVbvM0urH
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
