--- a/.env
+++ b/.env
@@ -11,8 +11,8 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=sist_siat
-DB_USERNAME=root
+DB_DATABASE=siat2
+DB_USERNAME='root'
 DB_PASSWORD=
 
 NOCAPTCHA_SITEKEY=6LeJXlcqAAAAAIcpN6kaauiwr9raE939kDe24gJV
